compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__label_shorthand_in_pattern_requires_v1_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2538
expression: "\npub type Wibble { Wibble(wibble: Int) }\n\npub fn main(wibble) {\n  case wibble {\n    Wibble(wibble:) -> wibble\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble { Wibble(wibble: Int) }

pub fn main(wibble) {
  case wibble {
    Wibble(wibble:) -> wibble
  }
}


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:6:12
  │
6 │     Wibble(wibble:) -> wibble
  │            ^^^^^^^ This requires a Gleam version >= 1.4.0

The label shorthand syntax was introduced in version v1.4.0. But the Gleam
version range specified in your `gleam.toml` would allow this code to run
on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.4.0"
