compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__list_literals_redundant_comparison_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4219
expression: "pub fn main(a, b) { [1] != [a, b(1)] }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(a, b) { [1] != [a, b(1)] }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:21
  │
1 │ pub fn main(a, b) { [1] != [a, b(1)] }
  │                     ^^^^^^^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
